fix: extra margin for unvisible element

--- a/k2-packages/ui-kit/src/DropDown/style.styl
+++ b/k2-packages/ui-kit/src/DropDown/style.styl
@@ -21,6 +21,8 @@
   position: absolute
   opacity: 0
   height: 100%
+  margin: 0
+  padding: 0
   &:focus ~ .option:after
     height: 100%
     width: 4px;
